feat: Token almost finished
